Refactor sections so that they resize within the window

--- a/app/index.html
+++ b/app/index.html
@@ -52,9 +52,10 @@
         </div>
       </div>
     </div>
+
     <div id="section-contact-trigger"></div>
     <div id="section-contact" class="section">
-      <div id="section-contact-child">
+      <div id="section-contact-child" class="section-child">
         <div id="contact-quote">
           <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
           <div class="quote">
@@ -85,7 +86,7 @@
     </div>
     <div id="section-story-type-trigger"></div>
     <div id="section-story-type" class="section">
-      <div id="section-story-type-child">
+      <div id="section-story-type-child" class="section-child">
         <div id="section-story-type-header">
           <h1>Telling your story well</h1>
           <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner. The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</div>
@@ -130,98 +131,107 @@
     </div>
     <div id="section-workshop-trigger"></div>
     <div id="section-workshop" class="section">
-      <div id="section-workshop-child">
-        <div id="work-right">
-          <h3>STRATEGIC SERVICES</h3>
-          <h1>Finding your story</h1>
-          <div class="main">Most maketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
-          <div class="main">You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
-          <a class="btn btn-default" href="#">STORY WORKSHOP DETAILS</a>
-        </div>
-        <div id="work-left">
-          <div id="workshop-quote">
-            <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
-            <div class="quote">
-              <div class="quote-text quote-blue">&quot;Real cleverness must stem from knowledge of a product.&quot;</div>
-              <div class="quote-attrib">BILL BERNBACH</div>
-            </div>
-            <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+      <div id="section-workshop-child" class="section-child">
+        <div id="section-workshop-flex" class="content-centered">
+          <div id="work-right">
+            <h3>STRATEGIC SERVICES</h3>
+            <h1>Finding your story</h1>
+            <div class="main">Most maketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
+            <div class="main">You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
+            <a class="btn btn-default" href="#">STORY WORKSHOP DETAILS</a>
           </div>
-          <img src="images/image-woman.jpg" alt="Woman" />
+          <div id="work-left">
+            <div id="workshop-quote">
+              <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+              <div class="quote">
+                <div class="quote-text quote-blue">&quot;Real cleverness must stem from knowledge of a product.&quot;</div>
+                <div class="quote-attrib">BILL BERNBACH</div>
+              </div>
+              <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+            </div>
+            <img src="images/image-woman.jpg" alt="Woman" />
+          </div>
         </div>
       </div>
     </div>
     <div id="section-work-trigger"></div>
     <div id="section-work" class="section">
-      <div id="section-work-child">
-        <div id="work-header">
-          <div id="work-title">
-            <h3>WORK</h3>
-            <h1>Stories we&#8217;ve developed<br> and recently told</h1>
-          </div>
-          <div id="work-quote">
-            <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
-            <div class="quote">
-              <div class="quote-text quote-yellow">&quot;It&#8217;s indisputable that the best way to persuade someone is by telling a compelling story.&quot;</div>
-              <div class="quote-attrib">AD WEEK</div>
+      <div id="section-work-child" class="section-child">
+        <div id="section-work-flex" class="content-centered">
+          <div id="work-header">
+            <div id="work-title">
+              <h2>WORK</h2>
+              <h1>Stories we&#8217;ve developed and recently told</h1>
             </div>
-            <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+            <div id="work-quote">
+              <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+              <div class="quote">
+                <div class="quote-text quote-yellow">&quot;It&#8217;s indisputable that the best way to persuade someone is by telling a compelling story.&quot;</div>
+                <div class="quote-attrib">AD WEEK</div>
+              </div>
+              <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+            </div>
           </div>
-        </div>
-        <div id="work-recent-stories">
-          <div id="work-story-1"><img src="images/video-1.jpg" alt="Demo video" /></div>
-          <div id="work-stories-right">
-            <div id="work-story-2"><img src="images/video-2.jpg" alt="Demo video" /></div>
-            <div id="work-story-3"><img src="images/video-3.jpg" alt="Demo video" /></div>
+          <div id="work-recent-stories">
+            <div id="work-story-1"><img src="images/video-1.jpg" alt="Demo video" /></div>
+            <div id="work-stories-right">
+              <div id="work-story-2"><img src="images/video-2.jpg" alt="Demo video" /></div>
+              <div id="work-story-3"><img src="images/video-3.jpg" alt="Demo video" /></div>
+            </div>
           </div>
-        </div>
-        <div id="work-btn-wrapper">
-          <a class="btn btn-default" href="#">SEE MORE</a>
+          <div id="work-btn-wrapper">
+            <a class="btn btn-default" href="#">SEE MORE</a>
+          </div>
         </div>
       </div>
     </div>
     <div id="section-approach-trigger"></div>
     <div id="section-approach" class="section">
-      <div id="section-approach-child">
-        <div id="approach-main">
-          <h3>APPROACH</h3>
-          <h1>Stories are better than ads</h1>
-          <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stoies we care about. But stories are different. A well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
+      <div id="section-approach-child" class="section-child">
+        <div id="section-approach-flex" class="content-centered">
+          <div id="approach-main">
+            <h3>APPROACH</h3>
+            <h1>Stories are better than ads</h1>
+            <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stoies we care about. But stories are different. A well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
+            </div>
+            <div id="approach-quote">
+              <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+              <div class="quote">
+                <div class="quote-text">&quot;Narrator Group&#8217;s work is the most effective I&#8217;ve ever tested. That includes all the compaigns I measured during my 20 years at Gallup.&quot;</div>
+                <div class="quote-attrib">DAVID NUTTER, SIGMA GROUP</div>
+              </div>
+              <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+            </div>
           </div>
-        </div>
-        <div id="approach-reel">
-          <img src="images/video-1.jpg" alt="Demo video" />
-        </div>
-        <div id="approach-quote">
-          <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
-          <div class="quote">
-            <div class="quote-text">&quot;Narrator Group&#8217;s work is the most effective I&#8217;ve ever tested. That includes all the compaigns I measured during my 20 years at Gallup.&quot;</div>
-            <div class="quote-attrib">DAVID NUTTER, SIGMA GROUP</div>
+
+          <div id="approach-reel">
+            <img src="images/video-1.jpg" alt="Demo video" />
           </div>
-          <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
         </div>
       </div>
     </div>
     <div id="section-about-trigger"></div>
     <div id="section-about" class="section">
-      <div id="section-about-child">
-        <h3>ABOUT</h3>
-        <h1>Creating stories that sell</h1>
-        <div class="main">Companies and brands come to us to draw and move audiences. Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well. Clients have looked to us to launch new brands. To revive old or stagnating ones. To talk to people across the country and film around the world.</div>
-        <div class="sub">And they&#8217;ve relied on us to bring a room full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with showing them how to tell a better brand story.
+      <div id="section-about-child" class="section-child">
+        <div id="section-about-flex" class="content-centered">
+          <h3>ABOUT</h3>
+          <h1>Creating stories that sell</h1>
+          <div class="main">Companies and brands come to us to draw and move audiences. Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well. Clients have looked to us to launch new brands. To revive old or stagnating ones. To talk to people across the country and film around the world.</div>
+          <div class="sub">And they&#8217;ve relied on us to bring a room full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with showing them how to tell a better brand story.
+          </div>
+          <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+          <div class="quote">
+            <div class="quote-text quote-orange">&quot;90% of people watch videos to guide product decision making&quot;</div>
+            <div class="quote-attrib">BUSINESS2COMMUNITY</div>
+          </div>
+          <div class="relative quote-line"><div class="white-line"></div>&nbsp;</div>
         </div>
-        <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
-        <div class="quote">
-          <div class="quote-text quote-orange">&quot;90% of people watch videos to guide product decision making&quot;</div>
-          <div class="quote-attrib">BUSINESS2COMMUNITY</div>
-        </div>
-        <div class="relative quote-line"><div class="white-line"></div>&nbsp;</div>
       </div>
     </div>
     <div id="section-campfire-trigger"></div>
     <div id="section-campfire" class="section">
-      <div id="section-campfire-child">
-        <div class="relative fill">
+      <div id="section-campfire-child" class="section-child">
+        <div id="section-campfire-flex" class="content-centered">
           <div id="campfire-wrapper">
             <h1>Some brands have a good story but aren&#8217;t telling it well.  Others don&#8217;t know or have lost sight of their story.</h1>
             <a id="btn-find-story" class="btn btn-default" href="#">FINDING YOUR STORY</a>
