Clean up contact section

--- a/app/index.html
+++ b/app/index.html
@@ -56,30 +56,32 @@
     <div id="section-contact-trigger"></div>
     <div id="section-contact" class="section">
       <div id="section-contact-child" class="section-child">
-        <div id="contact-quote">
-          <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
-          <div class="quote">
-            <div class="quote-text quote-orange">&quot;Scratch the surface in a typical boardroom, and we&#8217;re all just cavemen with briefcases, hungry for a wise man to tell us stories.&quot;</div>
-            <div class="quote-attrib">ALAN KAY, VP WALT DISNEY</div>
+        <div id="section-contact-flex" class="content-centered">
+          <div id="contact-quote">
+            <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+            <div class="quote">
+              <div class="quote-text quote-orange">&quot;Scratch the surface in a typical boardroom, and we&#8217;re all just cavemen with briefcases, hungry for a wise man to tell us stories.&quot;</div>
+              <div class="quote-attrib">ALAN KAY, VP WALT DISNEY</div>
+            </div>
+            <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
           </div>
-          <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
-        </div>
-        <div id="contact-right">
-          <div id="contact-text">Let&#8217;s find your best story and tell it together</div>
-          <div class="line"></div>
-          <div id="contact-fields">
-            <input type="text" placeholder="NAME" />
-            <input type="text" placeholder="PHONE NUMBER" />
-            <input type="text" placeholder="E-MAIL ADDRESS" />
-            <input type="text" placeholder="SUBJECT" />
-            <input type="text" placeholder="MESSAGE" />
+          <div id="contact-right">
+            <div id="contact-text">Let&#8217;s find your best story and tell it together</div>
             <div class="line"></div>
-            <a class="btn btn-default" href="#">SEND</a>
-          </div>
-          <div id="contact-info">
-            <div>The Narrator Group</div>
-            <div>Phone 720.295.8680</div>
-            <div><a href="#">storyteller@narratorgroup.com</a></div>
+            <div id="contact-fields">
+              <input type="text" placeholder="NAME" />
+              <input type="text" placeholder="PHONE NUMBER" />
+              <input type="text" placeholder="E-MAIL ADDRESS" />
+              <input type="text" placeholder="SUBJECT" />
+              <input type="text" placeholder="MESSAGE" />
+              <div class="line"></div>
+              <a class="btn btn-default" href="#">SEND</a>
+            </div>
+            <div id="contact-info">
+              <div>The Narrator Group</div>
+              <div>Phone 720.295.8680</div>
+              <div><a href="#">storyteller@narratorgroup.com</a></div>
+            </div>
           </div>
         </div>
       </div>
@@ -87,44 +89,46 @@
     <div id="section-story-type-trigger"></div>
     <div id="section-story-type" class="section">
       <div id="section-story-type-child" class="section-child">
-        <div id="section-story-type-header">
-          <h1>Telling your story well</h1>
-          <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner. The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</div>
-        </div>
-        <div class="story-types">
-          <div class="story-type">
-            <img src="images/icon-video.png" alt="Video icon" />
-            <span>Video</span>
+        <div id="section-story-type-flex" class="content-centered">
+          <div id="section-story-type-header">
+            <h1>Telling your story well</h1>
+            <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner. The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</div>
           </div>
-          <div class="story-type">
-            <img src="images/icon-branding.png" alt="Branding icon" />
-            <span>Branding</span>
+          <div class="story-types">
+            <div class="story-type">
+              <img src="images/icon-video.png" alt="Video icon" />
+              <span>Video</span>
+            </div>
+            <div class="story-type">
+              <img src="images/icon-branding.png" alt="Branding icon" />
+              <span>Branding</span>
+            </div>
+            <div class="story-type">
+              <img src="images/icon-music.png" alt="Music icon" />
+              <span>Music</span>
+            </div>
+            <div class="story-type">
+              <img src="images/icon-design.png" alt="Design icon" />
+              <span>Design</span>
+            </div>
           </div>
-          <div class="story-type">
-            <img src="images/icon-music.png" alt="Music icon" />
-            <span>Music</span>
-          </div>
-          <div class="story-type">
-            <img src="images/icon-design.png" alt="Design icon" />
-            <span>Design</span>
-          </div>
-        </div>
-        <div class="story-types">
-          <div class="story-type">
-            <img src="images/icon-digital.png" alt="Digital icon" />
-            <span>Digital</span>
-          </div>
-          <div class="story-type">
-            <img src="images/icon-social.png" alt="Social icon" />
-            <span>Social</span>
-          </div>
-          <div class="story-type">
-            <img src="images/icon-content.png" alt="Content icon" />
-            <span>Content</span>
-          </div>
-          <div class="story-type">
-            <img src="images/icon-broadcast.png" alt="Broadcast icon" />
-            <span>Broadcast</span>
+          <div class="story-types">
+            <div class="story-type">
+              <img src="images/icon-digital.png" alt="Digital icon" />
+              <span>Digital</span>
+            </div>
+            <div class="story-type">
+              <img src="images/icon-social.png" alt="Social icon" />
+              <span>Social</span>
+            </div>
+            <div class="story-type">
+              <img src="images/icon-content.png" alt="Content icon" />
+              <span>Content</span>
+            </div>
+            <div class="story-type">
+              <img src="images/icon-broadcast.png" alt="Broadcast icon" />
+              <span>Broadcast</span>
+            </div>
           </div>
         </div>
       </div>
@@ -190,7 +194,7 @@
       <div id="section-approach-child" class="section-child">
         <div id="section-approach-flex" class="content-centered">
           <div id="approach-main">
-            <h3>APPROACH</h3>
+            <h2>APPROACH</h2>
             <h1>Stories are better than ads</h1>
             <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stoies we care about. But stories are different. A well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
             </div>
@@ -214,7 +218,7 @@
     <div id="section-about" class="section">
       <div id="section-about-child" class="section-child">
         <div id="section-about-flex" class="content-centered">
-          <h3>ABOUT</h3>
+          <h2>ABOUT</h2>
           <h1>Creating stories that sell</h1>
           <div class="main">Companies and brands come to us to draw and move audiences. Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well. Clients have looked to us to launch new brands. To revive old or stagnating ones. To talk to people across the country and film around the world.</div>
           <div class="sub">And they&#8217;ve relied on us to bring a room full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with showing them how to tell a better brand story.
