Fix spelling issues

--- a/app/index.html
+++ b/app/index.html
@@ -141,9 +141,9 @@
         <div id="section-workshop-child" class="section-child">
           <div id="section-workshop-flex" class="content-centered">
             <div id="work-right">
-              <h3>STRATEGIC SERVICES</h3>
+              <h2>STRATEGIC SERVICES</h2>
               <h1>Finding your story</h1>
-              <div class="main">Most maketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
+              <div class="main">Most marketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
               <div class="main">You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
               <a class="btn btn-default" href="#">STORY WORKSHOP DETAILS</a>
             </div>
@@ -199,7 +199,7 @@
             <div id="approach-main">
               <h2>APPROACH</h2>
               <h1>Stories are better than ads</h1>
-              <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stoies we care about. But stories are different. A well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
+              <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stories we care about. But stories are different. A well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
               </div>
               <div id="approach-quote">
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
