Update music subsection

--- a/app/index.html
+++ b/app/index.html
@@ -27,12 +27,14 @@
     </style>
   </head>
   <body>
+    <canvas id="stars"></canvas>
+    <canvas id="embers"></canvas>
+
     <div id="sections">
       <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-      <canvas id="stars"></canvas>
-      <canvas id="embers"></canvas>
+
       <div id="section-header">
         <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
         <img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" />
@@ -271,7 +273,7 @@
         <h2>Music Creative Services</h2>
         <h1>No one ever danced to a mission statement</h1>
         <div class="white-line"></div>
-        <div>Your logo. Your colors. Your advertising. Your tagline. These are all important to your brand. But let’s be honest. No one has ever hummed to a logo or danced to a mission statement. We bring together brand and ad experts with musicians and composers to create something more memorable and entirely new: brand music.</div>
+        <div class="content">Your logo. Your colors. Your advertising. Your tagline. These are all important to your brand. But let’s be honest. No one has ever hummed to a logo or danced to a mission statement. We bring together brand and ad experts with musicians and composers to create something more memorable and entirely new: brand music.</div>
         <ul>
           <li>Soundtracks for TV, radio and podcasts</li>
           <li>Custom music for digital videos, trade shows and presentations</li>
@@ -279,14 +281,14 @@
           <li>Mnemoics and distinctive audio signatures</li>
           <li>Hold music for customer support centers</li>
         </ul>
-        <div>&quot;Research shows music dramatially boosts memory&quot;</div>
-        <div>Business Insider</div>
-        <img />
-        <div>&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
-        <div>Eric Sheinkop</div>
-        <div>GO TO OUR MUSIC SITE</div>
+        <div class="quote-blue">&quot;Research shows music dramatially boosts memory&quot;</div>
+        <h2>BUSINESS INSIDER</h2>
+        <img class="icon" src="images/icon-music.png" />
+        <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
+        <h2>ERIC SHEINKOP</h2>
+        <div class=".btn">GO TO OUR MUSIC SITE</div>
         <div>CLICK ON A CASSETTE TO LISTEN</div>
-        <img src="/images/music-cassettes.png" />
+        <img class="music-cassette" src="/images/music-cassettes.png" />
       </div>
     </div>
 
