Add hash links to sections

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
       <div id="section-contact-trigger"></div>
       <div id="section-contact" class="section">
         <div id="section-contact-child" class="section-child">
+        <a name="contact"></a>
           <div id="section-contact-flex" class="content-centered">
             <div id="contact-quote">
               <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
@@ -90,6 +91,7 @@
       <div id="section-story-type-trigger"></div>
       <div id="section-story-type" class="section">
         <div id="section-story-type-child" class="section-child">
+        <a name="story"></a>
           <div id="section-story-type-flex" class="content-centered">
             <div id="section-story-type-header">
               <h1>Telling your story well</h1>
@@ -139,6 +141,7 @@
       <div id="section-workshop-trigger"></div>
       <div id="section-workshop" class="section">
         <div id="section-workshop-child" class="section-child">
+        <a name="workshop"></a>
           <div id="section-workshop-flex" class="content-centered">
             <div id="work-right">
               <h2>STRATEGIC SERVICES</h2>
@@ -164,6 +167,7 @@
       <div id="section-work-trigger"></div>
       <div id="section-work" class="section">
         <div id="section-work-child" class="section-child">
+        <a name="work"></a>
           <div id="section-work-flex" class="content-centered">
             <div id="work-header">
               <div id="work-title">
@@ -195,6 +199,7 @@
       <div id="section-approach-trigger"></div>
       <div id="section-approach" class="section">
         <div id="section-approach-child" class="section-child">
+        <a name="approach"></a>
           <div id="section-approach-flex" class="content-centered">
             <div id="approach-main">
               <h2>APPROACH</h2>
@@ -220,6 +225,7 @@
       <div id="section-about-trigger"></div>
       <div id="section-about" class="section">
         <div id="section-about-child" class="section-child">
+        <a name="about"></a>
           <div id="section-about-flex" class="content-centered">
             <h2>ABOUT</h2>
             <h1>Creating stories that sell</h1>
@@ -238,6 +244,7 @@
       <div id="section-campfire-trigger"></div>
       <div id="section-campfire" class="section">
         <div id="section-campfire-child" class="section-child">
+        <a name="campfire"></a>
           <div id="section-campfire-flex" class="content-centered">
             <div id="campfire-wrapper">
               <h1>Some brands have a good story but aren&#8217;t telling it well.  Others don&#8217;t know or have lost sight of their story.</h1>
@@ -253,11 +260,11 @@
           </div>
         </div>
         <div class="social-fixed">
-          <a href="#"><i class="fa fa-youtube"></i></a>
-          <a href="#"><i class="fa fa-vimeo"></i></a>
-          <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-instagram"></i></a>
-          <a href="#"><i class="fa fa-pinterest-p"></i></a>
+          <a href="#contact"><i class="fa fa-youtube"></i></a>
+          <a href="#workshop"><i class="fa fa-vimeo"></i></a>
+          <a href="#story"><i class="fa fa-facebook"></i></a>
+          <a href="#approach"><i class="fa fa-instagram"></i></a>
+          <a href="#about"><i class="fa fa-pinterest-p"></i></a>
           <a href="#"><i class="fa fa-twitter"></i></a>
           <a href="#"><i class="fa fa-linkedin"></i></a>
           <a href="#"><i class="fa fa-google-plus"></i></a>
