--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
       <![endif]-->
       <div id="section-header">
         <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
-        <img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" />
+        <a href="#home"><img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" /></a>
       </div>
       <div class="moon-wrapper">
         <div class="moon">
@@ -52,8 +52,7 @@
           </div>
         </div>
       </div>
-      <div id="section-contact-trigger"></div>
-      <a name="contact"></a>
+      <div id="contact"></div>
       <div id="section-contact" class="section">
         <div id="section-contact-child" class="section-child">
           <div id="section-contact-flex" class="content-centered">
@@ -86,8 +85,7 @@
           </div>
         </div>
       </div>
-      <div id="section-story-type-trigger"></div>
-      <a name="story"></a>
+      <div id="story"></div>
       <div id="section-story-type" class="section">
         <div id="section-story-type-child" class="section-child">
           <div id="section-story-type-flex" class="content-centered">
@@ -136,8 +134,7 @@
           </div>
         </div>
       </div>
-      <div id="section-workshop-trigger"></div>
-      <a name="workshop"></a>
+      <div id="workshop"></div>
       <div id="section-workshop" class="section">
         <div id="section-workshop-child" class="section-child">
           <div id="section-workshop-flex" class="content-centered">
@@ -162,8 +159,7 @@
           </div>
         </div>
       </div>
-      <div id="section-work-trigger"></div>
-      <a name="work"></a>
+      <div id="work"></div>
       <div id="section-work" class="section">
         <div id="section-work-child" class="section-child">
           <div id="section-work-flex" class="content-centered">
@@ -194,8 +190,7 @@
           </div>
         </div>
       </div>
-      <div id="section-approach-trigger"></div>
-      <a name="approach"></a>
+      <div id="approach"></div>
       <div id="section-approach" class="section">
         <div id="section-approach-child" class="section-child">
           
@@ -220,8 +215,7 @@
           </div>
         </div>
       </div>
-      <div id="section-about-trigger"></div>
-      <a name="about"></a>
+      <div id="about"></div>
       <div id="section-about" class="section">
         <div id="section-about-child" class="section-child">
           <div id="section-about-flex" class="content-centered">
@@ -239,8 +233,7 @@
           </div>
         </div>
       </div>
-      <div id="section-campfire-trigger"></div>
-      <a name="campfire"></a>
+      <div id="campfire"></div>
       <div id="section-campfire" class="section">
         <div id="section-campfire-child" class="section-child">
           <div id="section-campfire-flex" class="content-centered">
@@ -258,16 +251,17 @@
           </div>
         </div>
         <div class="social-fixed">
-          <a href="#contact"><i class="fa fa-youtube"></i></a>
-          <a href="#workshop"><i class="fa fa-vimeo"></i></a>
-          <a href="#story"><i class="fa fa-facebook"></i></a>
-          <a href="#approach"><i class="fa fa-instagram"></i></a>
-          <a href="#about"><i class="fa fa-pinterest-p"></i></a>
+          <a href="#"><i class="fa fa-youtube"></i></a>
+          <a href="#"><i class="fa fa-vimeo"></i></a>
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-pinterest-p"></i></a>
           <a href="#"><i class="fa fa-twitter"></i></a>
           <a href="#"><i class="fa fa-linkedin"></i></a>
           <a href="#"><i class="fa fa-google-plus"></i></a>
         </div>
       </div>
+      <div id="home"></div>
     </div>
     <div id="subsection-music" class="subsection">
       <div class="subsection-child" class="subsection-child">
