--- a/app/index.html
+++ b/app/index.html
@@ -239,8 +239,8 @@
           <div id="section-campfire-flex" class="content-centered">
             <div id="campfire-wrapper">
               <h1>Some brands have a good story but aren&#8217;t telling it well.  Others don&#8217;t know or have lost sight of their story.</h1>
-              <a id="btn-find-story" class="btn btn-default" href="#">FINDING YOUR STORY</a>
-              <a id="btn-telling-it" class="btn btn-default" href="#">TELLING IT BETTER</a>
+              <a id="btn-find-story" class="btn btn-default" href="#workshop">FINDING YOUR STORY</a>
+              <a id="btn-telling-it" class="btn btn-default" href="#story">TELLING IT BETTER</a>
             </div>
             <div id="campfire-aside">
               <div>The human need for stories is enduring and mysterious. Great stories stay with us&#8212;and the best storytellers make us want to linger and find out what happens next.</div>
