Fix section hashes to not spam history

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
       <![endif]-->
       <div id="section-header">
         <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
-        <a href="#home"><img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" /></a>
+        <a href="#campfire"><img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" /></a>
       </div>
       <div class="moon-wrapper">
         <div class="moon">
@@ -261,7 +261,6 @@
           <a href="#"><i class="fa fa-google-plus"></i></a>
         </div>
       </div>
-      <div id="home"></div>
     </div>
     <div id="subsection-music" class="subsection">
       <div class="subsection-child" class="subsection-child">
