--- a/app/index.html
+++ b/app/index.html
@@ -95,8 +95,10 @@
             </div>
             <div class="story-types">
               <div class="story-type">
-                <img src="images/icon-video.png" alt="Video icon" />
-                <span>Video</span>
+                <a href="#video">
+                  <img src="images/icon-video.png" alt="Video icon" />
+                  <span>Video</span>
+                </a>
               </div>
               <div class="story-type">
                 <img src="images/icon-branding.png" alt="Branding icon" />
@@ -284,6 +286,69 @@
         <div class=".btn">GO TO OUR MUSIC SITE</div>
         <div>CLICK ON A CASSETTE TO LISTEN</div>
         <img class="music-cassette" src="/images/music-cassettes.png" />
+      </div>
+    </div>
+    <div id="subsection-video" class="subsection">
+      <div class="subsection-child" class="subsection-child">
+        <img class="sizzle-reel" src="/images/video-2.jpg" />
+        <h2>VIDEO CREATIVE SERVICES</h2>
+        <h1>Video is no longer a novelty, but good video is</h1>
+        <div class="white-line"></div>
+        <div class="content">Video is a must-have for brands. But few of the firms you turn to know how to tell a good video story. And even fewer know how to hold interest beyond a 30- or 60-second commercial. We save clients form bad video because we know to tell a good story. And because we create high-quality video without high costs.</div>
+        <ul>
+          <li>Videos for trade shows, corporate meetings, investor conferences, brand and product launches</li>
+          <li>Story and script development</li>
+          <li>Full production and post-production services: from filming and editing to custom graphics, animation, sound and music</li>
+          <li>Express video packages for smaller businesses and budgets</li>
+        </ul>
+        <img class="icon" src="images/icon-video.png" />
+        <div class="quote-blue">&quot;Videos are shared 12x more than links and text posts combined.&quot;</div>
+        <h2>PINTEREST</h2>
+        <div id="video-callout">CLICK TO WATCH THE VIDEOS</div>
+        <div class="video-examples">
+          <div class="video-example">
+            <a href="#">
+              <img src="images/video-1.jpg" alt="Video" />
+            </a>
+          </div>
+          <div class="video-example">
+            <a href="#">
+              <img src="images/video-1.jpg" alt="Branding" />
+            </a>
+          </div>
+          <div class="video-example">
+            <a href="#">
+              <img src="images/video-1.jpg" alt="Music" />
+            </a>
+          </div>
+          <div class="video-example">
+            <a href="#">
+              <img src="images/video-1.jpg" alt="Design" />
+            </a>
+          </div>
+        </div>
+        <div class="video-examples">
+          <div class="video-example">
+            <a href="#">
+              <img src="images/video-1.jpg" alt="Digital" />
+            </a>
+          </div>
+          <div class="video-example">
+            <a href="#">
+              <img src="images/video-1.jpg" alt="Social" />
+            </a>
+          </div>
+          <div class="video-example">
+            <a href="#">
+              <img src="images/video-1.jpg" alt="Content" />
+            </a>
+          </div>
+          <div class="video-example">
+            <a href="#">
+              <img src="images/video-1.jpg" alt="Broadcast" />
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
