Fix typos and adjust videos appearance

--- a/app/index.html
+++ b/app/index.html
@@ -304,7 +304,7 @@
         <h2>VIDEO CREATIVE SERVICES</h2>
         <h1>Video is no longer a novelty, but good video is</h1>
         <div class="white-line"></div>
-        <div class="content">Video is a must-have for brands. But few of the firms you turn to know how to tell a good video story. And even fewer know how to hold interest beyond a 30- or 60-second commercial. We save clients form bad video because we know to tell a good story. And because we create high-quality video without high costs.</div>
+        <div class="content">Video is a must-have for brands. But few of the firms you turn to know how to tell a good video story. And even fewer know how to hold interest beyond a 30- or 60-second commercial. We save clients from bad video because we know how to tell a good story. And because we create high-quality video without high costs.</div>
         <ul>
           <li>Videos for trade shows, corporate meetings, investor conferences, brand and product launches</li>
           <li>Story and script development</li>
@@ -352,12 +352,12 @@
             <a href="#">
               <img src="images/video-1.jpg" alt="Content" />
             </a>
-          </div>
+          </div><!-- 
           <div class="video-example">
             <a href="#">
               <img src="images/video-1.jpg" alt="Broadcast" />
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
